--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^4.4.0",
     "react-loader-spinner": "^5.3.4",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.8",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.3"
   },
